--- a/index.html
+++ b/index.html
@@ -169,5 +169,29 @@
   </div>
 </template>
 
+<script>
+  var fireballSize = 22;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+  
+  var getFireballSpeed = function(left) {
+    if (left) {
+      return 5;
+    } else {
+      return 2;
+    }
+  }
+  var getWizardHeight = function() {
+    return 1.337 * wizardWidth;
+  }
+  function getWizardX(width) {
+    return width / 2;
+  }
+  function getWizardY(height) { 
+    return height / 3;
+  }
+</script>
+
+<script src='js/game.js'></script>
 </body>
 </html>
