--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
   <div class="demo"></div>
 
   <div class="setup-open">
-    <img src="./img/user-1.jpg" class="setup-open-icon">
+    <img src="./img/user-1.jpg" class="setup-open-icon" tabindex="0">
   </div>
 </header>
 
-<div class="overlay setup hidden">
+<div class="overlay setup hidden" tabindex="0">
   <form class="setup-wizard-form">
 
     <div class="setup-title">
       <div class="setup-user">
         <img class="setup-user-pic" src="./img/user-1.jpg"/>
         <label>
-          <input type="text" class="setup-user-name" value="Синий Пендальф"/>
+          <input type="text" class="setup-user-name" value="Синий Пендальф" minlength="2" maxlength="50" required>
         </label>
       </div>
 
