--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         </label>
       </div>
 
-      <span class="setup-close">&times;</span>
+      <span class="setup-close" tabindex="0">&times;</span>
     </div>
-
+s
 
     <div class="setup-artifacts-shop">
       <div class="setup-artifacts-cell"><img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
