Добавлен еще один спомогательный модуль

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     return height / 3;
   }
 </script>
-
+<script src='js/colorize-element.js'></script>
 <script src='js/stat.js'></script>
 <script src='js/setup.js'></script>
 <script src="js/dialog.js"></script>
