--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
   }
 </script>
 <script src='js/colorize-element.js'></script>
+<script src='js/render.js'></script>
 <script src="js/load.js"></script>
 <script src='js/stat.js'></script>
 <script src='js/setup.js'></script>
